# doodba-operator

./: Cargo.toml  README.md
src/: controller.rs  error.rs  main.rs  reconcile.rs  types.rs  util.rs
src/types/: annotations.rs  config.rs  database.rs  filestore.rs  instance.rs  phase.rs
